--- a/package.json
+++ b/package.json
@@ -22,5 +22,17 @@
     "https://reacttraining.com/react-router/web/example/custom-link",
     "https://github.com/ReactTraining/react-router/issues/4556",
     "https://termsfeed.com/terms-conditions/92f7823bf0fd4eea380a96491981ccb8"
-  ]
+  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
